<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/back_btn"
            app:navigationIconTint="@color/white_transparent_50"
            android:background="@drawable/toolbar_gradient">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="64dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toTopOf="@+id/ad_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/mass_index_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/textview_shape"
            android:fontFamily="@font/raleway_semibold"
            android:padding="4dp"
            android:text="@string/body_mass_index_text"
            android:textAlignment="center"
            android:textColor="@color/white_transparent_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mass_index_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins"
            android:lines="1"
            android:maxLength="5"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="64sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mass_index_tv"
            android:hint="@string/mass_index_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/share_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mass_index_et">

            <TextView
                android:id="@+id/hello_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_tv_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/bmi_range_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/bmi_range_tv_text"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/ponderal_index_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/ponderal_index_tv_text"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rate_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:iconPadding="10dp"
            android:drawableLeft="@drawable/share"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/share_btn_text"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/share_btn"
            app:layout_constraintTop_toTopOf="@+id/share_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="12dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:iconPadding="10dp"
            android:drawableLeft="@drawable/star"
            android:text="@string/rate_btn_text"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ad_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>