<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addDetails.AddDetailsFragment">

    <TextView
        android:id="@+id/personal_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/personal_detail_tv_text"
        android:textColor="@color/main_screen_color"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_et_layout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_detail_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="20"
            android:hint="@string/name_et_hint"
            android:textColorHint="@color/gray"
            android:fontFamily="@font/poppins"
            android:inputType="text|textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/calculate_index_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins"
        android:text="@string/calculate_bmi_tv_text"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et_layout" />

    <TextView
        android:id="@+id/weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/weight_tv_text"
        android:textColor="#3D3D3D"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/height_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_index_tv" />

    <TextView
        android:id="@+id/height_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/height_tv_text"
        android:textColor="#3D3D3D"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/gender_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weight_tv"
        app:layout_constraintTop_toTopOf="@+id/weight_tv" />

    <TextView
        android:id="@+id/gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_tv_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/height_tv"
        app:layout_constraintTop_toTopOf="@+id/height_tv"
        android:layout_marginEnd="38dp"
        android:textColor="#3D3D3D"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/pickers_cv"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="18dp"
        app:layout_constraintTop_toBottomOf="@+id/height_tv">

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/weight_np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            app:np_dividerColor="@color/main_color"
            app:np_value="43"
            app:np_dividerDistance="32dp"
            app:np_dividerLength="54dp"
            app:np_dividerThickness="3.5dp"
            app:np_dividerType="underline"
            app:np_selectedTextColor="@color/main_color"
            app:np_selectedTextSize="16sp"
            app:np_textColor="@color/gray"
            app:np_textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/height_np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:np_textSize="16sp"
            app:np_selectedTextSize="16sp"
            app:np_dividerThickness="3.5dp"
            app:np_dividerDistance="32dp"
            app:np_dividerLength="54dp"
            app:np_value="127"
            app:np_dividerColor="@color/main_color"
            app:np_dividerType="underline"
            app:np_textColor="@color/gray"
            app:np_selectedTextColor="@color/main_color"/>

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/gender_np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            app:np_textSize="16sp"
            app:np_selectedTextSize="16sp"
            app:np_dividerThickness="3.5dp"
            app:np_dividerDistance="32dp"
            app:np_dividerLength="54dp"
            app:np_dividerColor="@color/main_color"
            app:np_dividerType="underline"
            app:np_textColor="@color/gray"
            app:np_selectedTextColor="@color/main_color"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@+id/pickers_cv"
        app:layout_constraintStart_toStartOf="@+id/pickers_cv"
        app:layout_constraintTop_toBottomOf="@+id/pickers_cv"
        android:textColor="@color/white"
        android:text="@string/calculate_tv_text"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="@font/raleway_semibold"
        android:background="@drawable/rounded_corners" />

</androidx.constraintlayout.widget.ConstraintLayout>